# csce_5214

project_2/: HW6.docx
project_2/text_classification/: .gitignore  README.md  docker-compose.yml  environment.yml
project_2/text_classification/aws/cf/: README.md
project_2/text_classification/aws/ecr/: README.md
project_2/text_classification/aws/ecs/: README.md  ecs-text-classification-web-service.yaml
project_2/text_classification/aws/s3/: README.md
project_2/text_classification/docker/: Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
project_2/text_classification/docker/BERT/: train_BERT.py
project_2/text_classification/docker/text_classification/: algo_manager.py  model.py
project_2/text_classification/notebooks/: text-classification-using-spacy.ipynb
project_2/text_classification/notebooks/LSTM/: LSTM.ipynb
project_2/text_classification/notebooks/LSTM/working/: best_model.pth
project_2/text_classification/tests/data/tests/: AlgoTest.py
